# K-Ollama-Plasmoid

./: BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  TODO.md  build.sh  copilot-instructions.md  install.sh  messages.mo  metadata.json  package.conf  translate.sh
.github/workflows/: release.yml
contents/config/: config.qml  main.xml
contents/js/: utils.js
contents/ui/: CompactRepresentation.qml  ConfigAppearance.qml  ConfigDefaults.qml  ConfigServer.qml  ConnectionManager.qml  main.qml
docs/: BUILDING.md  CODING_STYLE.md  CONTRIBUTING.md  copilot-instructions.md  kde-store-upload-materials.md
po/: CMakeLists.txt  K-Ollama-Plasmoid.pot  es.po
scripts/: install-translations.sh  package-up.sh  run-tests  run-tests.sh  test-spanish.sh  translate.sh
tests/: test-spanish.qml  translation-viewer.qml  tst_compact_utils.qml  tst_debugLog.qml  tst_error_handling.qml  tst_getServerUrl.qml  tst_kcm_debuglog.qml  tst_markdown.qml  tst_parseText.qml  tst_performance.qml  tst_systemprompt.qml  tst_ui_basic.qml  tst_ui_config.qml  tst_ui_connection.qml  tst_ui_input.qml  tst_ui_keys.qml  tst_ui_toolbar.qml  tst_utils.qml
